# mcp-governance-platform

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  setup.sh  start.sh
.opencode/plans/: tag-fix.md
agents/: base_agent.py  devops_agent.py  do_agent.py  monitor_agent.py  orchestrator.py  pgsql_agent.py  secops_agent.py  sysadmin_agent.py  vcenter_agent.py  zabbix_agent.py
agt_gateway/: gateway.py
config/: hosts.yaml  settings.py
mcp_governance/audit/: store.py
mcp_governance/cli/: main.py
mcp_governance/gateway/: app.py
mcp_governance/gateway/routes/: agents.py  audit.py  dashboard.py  govern.py  monitor.py  policy.py
mcp_governance/policy/: engine.py  models.py
mcp_servers/: Dockerfile.debian-mcp  debian_mcp.py  do_mcp.py  file_mcp.py  gateway_mcp.py  pgsql_mcp.py  shell_mcp.py  shell_mcp_http.py  vcenter_mcp.py  zabbix_mcp.py
policies/: default-policy.yaml
registry/: api.py  models.py
scripts/: grant_schema.sql  init_pgsql.sql
templates/: index.html
